--- a/adminpro-angular7-lite/Angular/src/app/component/encuesta/encuesta.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/encuesta/encuesta.component.html
@@ -6,16 +6,17 @@
                 <mat-icon mat-list-icon>
                     <i class="mdi mdi-hand-pointing-right"></i>
                 </mat-icon>
+
+                <div class="container" id="grafico">
+                    <div class="col-sm-4 text-center">
+                        <canvas baseChart [legend]=false [data]="pieChartData" [labels]="pieChartLabels" [chartType]="pieChartType" [options]="pieChartOptions" (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)"></canvas>
+                    </div>
+                </div>
                 <i class="mdi mdi-chart-pie"></i>
                 <h4 mat-line>A - {{pregunta.respuestaA}}</h4>
                 <h4 mat-line>B - {{pregunta.respuestaB}}</h4>
                 <h4 mat-line *ngIf="pregunta.respuestaC!=null">C - {{pregunta.respuestaC}}</h4>
             </mat-list-item>
-            <div class="container" id="grafico">
-                <div class="col-sm-4 text-center">
-                    <canvas baseChart [data]="pieChartData" [labels]="pieChartLabels" [chartType]="pieChartType" [options]="pieChartOptions" (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)"></canvas>
-                </div>
-            </div>
         </mat-card>
 
         <mat-divider></mat-divider>
