--- a/adminpro-angular7-lite/Angular/src/app/shared/header-navigation/navigation.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/shared/header-navigation/navigation.component.html
@@ -36,6 +36,7 @@
                     </div>
                 </li>
                 <li><a (click)="logout()"><i class="fa fa-power-off"></i> Logout</a></li>
+                <li><a (click)="openDialogChangePass()"><i class="fa fa-lock"></i> Cambiar contraseña</a></li>
             </ul>
         </div>
     </li>
