--- a/adminpro-angular7-lite/Angular/src/app/component/encuesta/encuesta.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/encuesta/encuesta.component.html
@@ -36,19 +36,19 @@
                 <i class="mdi mdi-hand-pointing-right"></i>
             </mat-icon> -->
 
-            <mat-radio-group class="example-radio-group">
+            <mat-radio-group class="example-radio-group" [(ngModel)]="respuestaMarcada">
                 <h4 mat-line>
-                    <mat-radio-button value="pregunta.respuestaA" class="md-warn" color="primary">
+                    <mat-radio-button value="pregunta.respuestaA" [value]="respuestaMarcada" class="md-warn" color="primary">
                         A - {{pregunta.respuestaA}}
                     </mat-radio-button>
                 </h4>
                 <h4 mat-line>
-                    <mat-radio-button value="pregunta.respuestaB" class="example-radio-button" color="primary">
+                    <mat-radio-button value="pregunta.respuestaB" [value]="respuestaMarcada" class="example-radio-button" color="primary">
                         B - {{pregunta.respuestaB}}
                     </mat-radio-button>
                 </h4>
                 <h4 mat-line>
-                    <mat-radio-button *ngIf="pregunta.respuestaC!=null" value="pregunta.respuestaC" class="example-radio-button" color="primary">
+                    <mat-radio-button *ngIf="pregunta.respuestaC!=null" value="pregunta.respuestaC" [value]="respuestaMarcada" class="example-radio-button" color="primary">
                         C - {{pregunta.respuestaC}}
                     </mat-radio-button>
                 </h4>
@@ -59,7 +59,7 @@
     </div>
     <br>
     <div fxFlexFill>
-        <button mat-raised-button color="primary" fxFlex="100%">¡ENVIAR ENCUESTA!</button>
+        <button mat-raised-button color="primary" fxFlex="100%" (click)="enviarEncuesta()">¡ENVIAR ENCUESTA!</button>
     </div>
 
 
