--- a/adminpro-angular7-lite/Angular/src/app/component/encuesta/encuesta.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/encuesta/encuesta.component.html
@@ -36,19 +36,19 @@
                 <i class="mdi mdi-hand-pointing-right"></i>
             </mat-icon> -->
 
-            <mat-radio-group class="example-radio-group" [(ngModel)]="respuestaMarcada">
+            <mat-radio-group class="example-radio-group">
                 <h4 mat-line>
-                    <mat-radio-button value="pregunta.respuestaA" [value]="respuestaMarcada" class="md-warn" color="primary">
+                    <mat-radio-button [value]="pregunta.respuestaA" (click)="rellenarArrayRespuesta(pregunta.respuestaA)" class="md-warn" color="primary">
                         A - {{pregunta.respuestaA}}
                     </mat-radio-button>
                 </h4>
                 <h4 mat-line>
-                    <mat-radio-button value="pregunta.respuestaB" [value]="respuestaMarcada" class="example-radio-button" color="primary">
+                    <mat-radio-button [value]="pregunta.respuestaB" (click)="rellenarArrayRespuesta(pregunta.respuestaB)" class="example-radio-button" color="primary">
                         B - {{pregunta.respuestaB}}
                     </mat-radio-button>
                 </h4>
                 <h4 mat-line>
-                    <mat-radio-button *ngIf="pregunta.respuestaC!=null" value="pregunta.respuestaC" [value]="respuestaMarcada" class="example-radio-button" color="primary">
+                    <mat-radio-button *ngIf="pregunta.respuestaC!=null" (click)="rellenarArrayRespuesta(pregunta.respuestaC)" [value]="pregunta.respuestaC" class="example-radio-button" color="primary">
                         C - {{pregunta.respuestaC}}
                     </mat-radio-button>
                 </h4>
