--- a/adminpro-angular7-lite/Angular/src/app/component/proyecto-detallado/proyecto-detallado.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/proyecto-detallado/proyecto-detallado.component.html
@@ -5,7 +5,7 @@
                 <h3 class="card-title">{{proyect.nombre}}</h3>
                 <h6 class="card-subtitle">Imagenes</h6>
                 <ngb-carousel>
-                    <ng-template ngbSlide *ngFor="let imagen of listaImagenes" >
+                    <ng-template ngbSlide *ngFor="let imagen of listaImagenes">
                         <img class="img-fluid" src="{{imagen}}" alt="Random first slide">
                         <div class="carousel-caption">
                             <h3 class="text-white font-bold">Imagenes del proyecto {{proyect.nombre}}</h3>
@@ -33,17 +33,17 @@
     </div>
 </div>
 <div class="col-md-11">
-	<div class="card card-outline-info">
-		<div class="card-header">
-			<h4 class="m-b-0 text-white">Añade un comentario</h4>
-		</div>
-		<div class="card-body">
-			<input _ngcontent-c2="" class="form-control" id="exampleInputPassword1" placeholder="comentario" type="comentario">
-			<br>
-			<br>
-			<a href="#" class="btn btn-inverse" (click)="addComentario()">Comentar</a>
-		</div>
-	</div>
+    <div class="card card-outline-info">
+        <div class="card-header">
+            <h4 class="m-b-0 text-white">Añade un comentario</h4>
+        </div>
+        <div class="card-body">
+            <input _ngcontent-c2="" class="form-control" id="exampleInputPassword1" placeholder="comentario" type="comentario">
+            <br>
+            <br>
+            <a href="#" class="btn btn-inverse" (click)="addComentario()">Comentar</a>
+        </div>
+    </div>
 </div>
 <div *ngFor="let comentario of ultimosComentarios" class="col-md-11">
     <div class="card">
@@ -60,5 +60,19 @@
                 <b>{{comentario.valoracion}}</b>
             </div>
         </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-md-5">
+
+    </div>
+    <div class="col-md-2" *ngIf="masComentarios">
+        <button (click)="verTodosComentarios()">
+            Ver más comentarios
+        </button>
+    </div>
+    <div class="col-md-5">
+
     </div>
 </div>
