funcionalidad de editar proyecto hecha, moraleja: mes de febrero, jornal entero

--- a/adminpro-angular7-lite/Angular/src/app/component/lista-proyectos/lista-proyectos.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/lista-proyectos/lista-proyectos.component.html
@@ -9,6 +9,7 @@
                     <div class="card-body">
                         <h4 class="card-title">{{proyecto.nombre}} - {{proyecto.curso}}</h4>
                         <button (click)="VerProyecto(proyecto.proyecto)" class="btn btn-primary" style="width:40%;">Ver</button>
+                        <button (click)="openDialogEditProject(proyecto.proyecto)" *ngIf="admin" class="btn btn-primary" style="width:40%;">Editar</button>
                     </div>
                 </div>
             </div>
