Eliminar proyecto terminado moraleja: mas flojo que el sevilla contra el barsa

--- a/adminpro-angular7-lite/Angular/src/app/component/lista-proyectos/lista-proyectos.component.css
+++ b/adminpro-angular7-lite/Angular/src/app/component/lista-proyectos/lista-proyectos.component.css
@@ -18,6 +18,12 @@
     filter: alpha (opacity=50);
 }
 
+.botones {
+    display: flex;
+    justify-content: space-between;
+
+}
+
 .boton a {
     color: #fff;
     text-decoration: none;
