Con mucho gusto, y sin más dilación, los gráficos en dinámico. ~El público corea el nombre del Blázquez~

--- a/adminpro-angular7-lite/Angular/src/app/component/encuesta/encuesta.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/encuesta/encuesta.component.html
@@ -10,7 +10,7 @@
 
                 <div class="container" id="grafico">
                     <div class="col-sm-4 text-center">
-                        <canvas baseChart [legend]=false [data]="pieChartData" [labels]="pieChartLabels" [chartType]="pieChartType" [options]="pieChartOptions" (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)"></canvas>
+                        <canvas baseChart [legend]=false [data]="valoresgraficos(pregunta)" [labels]="pieChartLabels" [chartType]="pieChartType" [options]="pieChartOptions" (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)"></canvas>
                     </div>
                 </div>
                 <i class="mdi mdi-chart-pie" (click)="randomizeType()"></i>
