eliminar comentario implementado, Moraleja: Equivocarse es de sabios

--- a/adminpro-angular7-lite/Angular/src/app/component/proyecto-detallado/proyecto-detallado.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/proyecto-detallado/proyecto-detallado.component.html
@@ -62,7 +62,7 @@
     </div>
 </div>
 <div *ngFor="let comentario of ultimosComentarios" class="col-md-11">
-    <div class="card">
+    <div class="card" >
         <div class="card-body">
             <h3 class="card-title">{{comentario.nombreAutor}}</h3>
             <h6 class="card-subtitle">{{comentario.contenido}}</h6>
@@ -75,6 +75,8 @@
             <div class="m-t-10">Valoración:
                 <b>{{comentario.valoracion}}</b>
             </div>
+            <button class="btn btn-danger" *ngIf="esMioElComentario(comentario.autor)" (click)="deleteComentarioUser(comentario.id)">Eliminar</button>
+            <button class="btn btn-danger" *ngIf="isAdmin()" (click)="deleteComentario()">Eliminar</button>
         </div>
     </div>
 </div>
