--- a/adminpro-angular7-lite/Angular/src/app/shared/header-navigation/navigation.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/shared/header-navigation/navigation.component.html
@@ -10,20 +10,26 @@
 <ul class="navbar-nav my-lg-0 float-right">
         
     <li [class.active]="showMenu === topNavItem.title" *ngFor="let topNavItem of topNavItems" [routerLinkActive]="topNavItem.submenu.length != 0 ? '' : 'active'" style="margin:15px;">
-        <div class="nav-small-cap" *ngIf="topNavItem.extralink === true">{{topNavItem.title}}</div>
-        <a [routerLink]="topNavItem.class === '' ? [topNavItem.path] : null" [ngClass]="[topNavItem.class]" *ngIf="!topNavItem.extralink;">
+
+        <a [routerLink]="topNavItem.class === '' ? [topNavItem.path] : null" [ngClass]="[topNavItem.class]">
                 <i [ngClass]="[topNavItem.icon]"></i>
                 <span class="hide-menu">{{topNavItem.title}}
                     <span *ngIf="topNavItem.label != '' " [ngClass]="[topNavItem.labelClass]">{{topNavItem.label}}</span>
                         </span>
             </a>
         </li>
+        <li style="margin:15px;" *ngIf="!(admin || user)">
+            <a (click)="iniciarSesion()">
+                <div class="nav-small-cap" >Iniciar sesión</div>
+            </a>
+            </li>
+
     
     
     <!-- ============================================================== -->
     <!-- Profile -->
     <!-- ============================================================== -->
-    <li class="nav-item dropdown" ngbDropdown placement="bottom-right">
+    <li class="nav-item dropdown" ngbDropdown placement="bottom-right"  *ngIf="admin || user">
         <a ngbDropdownToggle class="nav-link dropdown-toggle text-muted waves-effect waves-dark" href="javascript:void(0)" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src={{img}} alt="user" class="profile-pic" /></a>
         <div class="dropdown-menu animated slideInDown" ngbDropdownMenu>
             <ul class="dropdown-user">
