--- a/adminpro-angular7-lite/Angular/src/app/component/proyecto-detallado/proyecto-detallado.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/proyecto-detallado/proyecto-detallado.component.html
@@ -3,6 +3,7 @@
         <div class="card">
             <div class="card-body">
                 <h3 class="card-title">{{proyect.nombre}}</h3>
+                <button (click)="openDialogEditPhoto()">Editar Fotos</button>
                 <h6 class="card-subtitle">Imagenes</h6>
                 <ngb-carousel>
                     <ng-template ngbSlide *ngFor="let imagen of listaImagenes">
