--- a/adminpro-angular7-lite/Angular/src/app/dialogs/add-project/add-project.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/dialogs/add-project/add-project.component.html
@@ -54,7 +54,7 @@
             </div>
         </div>
 
-        <div class="form-group" *ngIf="edit === false">
+        <div class="form-group">
             <!-- <input type="file" class="form-control-file" id="exampleFormControlFile1" [formControl]="form.controls['img']"> -->
             <input type="file" (change)="foto64()" id="fotoInput" [formControl]="form.controls['img']" />
         </div>
