--- a/adminpro-angular7-lite/Angular/src/app/component/proyecto-detallado/proyecto-detallado.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/proyecto-detallado/proyecto-detallado.component.html
@@ -7,7 +7,7 @@
                 <h6 class="card-subtitle">Imagenes</h6>
                 <ngb-carousel>
                     <ng-template ngbSlide *ngFor="let imagen of listaImagenes">
-                        <img class="img-fluid" src="{{imagen}}" alt="Random first slide">
+                        <img class="rounded mx-auto d-block" src="{{imagen}}" alt="Random first slide">
                         <div class="carousel-caption">
                             <h3 class="text-white font-bold">Imagenes del proyecto {{proyect.nombre}}</h3>
                             <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
