Mejorando mi ultimo commit moraleja taca y pa entro

--- a/SalesianosExpoFp2/app/src/main/res/layout/activity_session.xml
+++ b/SalesianosExpoFp2/app/src/main/res/layout/activity_session.xml
@@ -6,24 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".SessionActivity">
 
-    <FrameLayout
-        android:id="@+id/frame"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+
+
 
         <fragment
             android:id="@+id/fragment"
             android:name="com.example.jose.salesianosexpofp.Fragments.LoginFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </FrameLayout>
+            android:layout_height="match_parent" />
+
 
 </android.support.constraint.ConstraintLayout>
