--- a/adminpro-angular7-lite/Angular/src/app/component/proyecto-detallado/proyecto-detallado.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/proyecto-detallado/proyecto-detallado.component.html
@@ -42,7 +42,7 @@
         </div>
     </div>
 </div>
-<div class="col-md-11">
+<div class="col-md-11" *ngIf="admin || user">
     <div class="card card-outline-info">
         <div class="card-header">
             <h4 class="m-b-0 text-white">Añade un comentario</h4>
