--- a/adminpro-angular7-lite/Angular/src/app/component/proyecto-detallado/proyecto-detallado.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/proyecto-detallado/proyecto-detallado.component.html
@@ -7,7 +7,7 @@
                 <h6 class="card-subtitle">Imagenes</h6>
                 <ngb-carousel>
                     <ng-template ngbSlide *ngFor="let imagen of listaImagenes">
-                        <img class="rounded mx-auto d-block" src="{{imagen}}" alt="Random first slide">
+                        <img class="c-img" src="{{imagen}}" alt="Random first slide">
                         <div class="carousel-caption">
                             <h3 class="text-white font-bold">Imagenes del proyecto {{proyect.nombre}}</h3>
                             <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
@@ -65,6 +65,7 @@
 <div *ngFor="let comentario of ultimosComentarios" class="col-md-11">
     <div class="card" >
         <div class="card-body">
+            <div class="u-img"><img class="u-img" src={{comentario.imagenAutor}} alt="user"></div>
             <h3 class="card-title">{{comentario.nombreAutor}}</h3>
             <h6 class="card-subtitle">{{comentario.contenido}}</h6>
             <ngb-rating [readonly]="true" [(rate)]="comentario.valoracion">
