comentarios mostrados en orden correctos, pantalla de inicio pendiente de imagenes y editar imagenes mejorado visualmente, Moraleja: No es mas rico el que mas tiene, si no el que menos necesita

--- a/adminpro-angular7-lite/Angular/src/app/component/proyecto-detallado/proyecto-detallado.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/proyecto-detallado/proyecto-detallado.component.html
@@ -3,8 +3,9 @@
         <div class="card">
             <div class="card-body">
                 <h3 class="card-title">{{proyect.nombre}}</h3>
-                <button (click)="openDialogEditPhoto()">Editar Fotos</button>
-                <h6 class="card-subtitle">Imagenes</h6>
+                <button class="btn btn-warning" (click)="openDialogEditPhoto()">Editar Fotos</button>
+                <br>
+                <br>
                 <ngb-carousel class="carousel">
                     <ng-template ngbSlide *ngFor="let imagen of listaImagenes">
                         <img class="c-img" src="{{imagen}}" alt="Random first slide">
