--- a/adminpro-angular7-lite/Angular/src/app/dialogs/edit-photos/edit-photos.component.css
+++ b/adminpro-angular7-lite/Angular/src/app/dialogs/edit-photos/edit-photos.component.css
@@ -8,3 +8,7 @@
     background: url('../../../assets/images/cargando.gif') 50% 50% no-repeat rgb(249,249,249);
     opacity: .8;
 }
+
+.btn-danger {
+    margin-left: 37%;
+}
