--- a/adminpro-angular7-lite/Angular/src/app/dialogs/edit-photos/edit-photos.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/dialogs/edit-photos/edit-photos.component.html
@@ -5,7 +5,7 @@
         <div class="card text-center">
           <img class="card-img-top img-responsive" style="object-fit:scale-down; height:200px" src={{imagen}} alt="Card image cap">
         </div>
-        <button (click)="eliminarFoto(imagen)">Eliminar</button>
+        <button class="btn btn-danger" (click)="eliminarFoto(imagen)">Eliminar</button>
       </div>
       <div class="form-group">
         <input type="file" id="fotosInput" (change)="fotos64()" multiple />
@@ -16,7 +16,7 @@
   </div>
 </div>
 <div fxLayoutAlign="end end">
-  <button type="button" class="btn btn-rounded btn-primary" fxFlex="20%" (click)="editar()">Editar</button>
+  <button type="button" class="btn btn-primary" fxFlex="20%" (click)="editar()">Editar</button>
 </div>
 
 <div *ngIf="loading">
