cambios visuales en diversos componentes y ngIf implementado en editar, Moraleja: al pan pan y al vino vino

--- a/adminpro-angular7-lite/Angular/src/app/component/lista-proyectos/lista-proyectos.component.css
+++ b/adminpro-angular7-lite/Angular/src/app/component/lista-proyectos/lista-proyectos.component.css
@@ -42,3 +42,18 @@
     /* margin-bottom: 30%; */
     margin-top: 14%;
 }
+
+.btn-primary {
+    width: 32%;
+    float: left;
+}
+
+.btn-warning {
+    width: 32%;
+    float: left;
+}
+
+.btn-danger {
+    width: 32%;
+    float: left;
+}
