--- a/adminpro-angular7-lite/Angular/src/app/component/lista-proyectos/lista-proyectos.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/lista-proyectos/lista-proyectos.component.html
@@ -20,9 +20,9 @@
                         </div>
                     -->
                     <div class="container botones">
-                        <button (click)="VerProyecto(proyecto.proyecto)" class="btn btn-primary" style="width:30%;">Ver</button>
-                        <button (click)="openDialogEditProject(proyecto.proyecto)" *ngIf="admin" class="btn btn-warning" style="width:30%;">Editar</button>
-                        <button (click)="openDialogDeleteProject(proyecto)" *ngIf="admin" class="btn btn-danger" style="width:30%;">Eliminar</button>
+                        <button (click)="VerProyecto(proyecto.proyecto)" class="btn btn-primary">Ver</button>
+                        <button (click)="openDialogEditProject(proyecto.proyecto)" *ngIf="admin" class="btn btn-warning">Editar</button>
+                        <button (click)="openDialogDeleteProject(proyecto)" *ngIf="admin" class="btn btn-danger">Eliminar</button>
                         </div>
                     </div>
                 </div>
