cambios visuales en el inicio

--- a/adminpro-angular7-lite/Angular/src/app/component/inicio/inicio.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/inicio/inicio.component.html
@@ -8,14 +8,14 @@
 						</div>
 					</ng-template>
 					<ng-template ngbSlide>
-						<img src="assets/images/big/img2.jpg" alt="Random second slide">
+						<img src="assets/images/big/expo.jpg" alt="Random second slide">
 						<div class="carousel-caption">
 							<h3 class="text-white font-bold">Second slide label</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 						</div>
 					</ng-template>
 					<ng-template ngbSlide>
-						<img src="assets/images/big/img3.jpg" alt="Random third slide">
+						<img src="assets/images/big/portada4-1.jpg" alt="Random third slide">
 						<div class="carousel-caption">
 							<h3 class="text-white font-bold">Third slide label</h3>
 							<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
