--- a/adminpro-angular7-lite/Angular/src/app/component/proyecto-detallado/proyecto-detallado.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/proyecto-detallado/proyecto-detallado.component.html
@@ -78,7 +78,7 @@
             <div class="m-t-10">Valoración:
                 <b>{{comentario.valoracion}}</b>
             </div>
-            <button class="btn btn-danger" *ngIf="esMioElComentario(comentario.autor)" (click)="deleteComentarioUser(comentario.id)">Eliminar</button>
+            <button class="btn btn-danger" *ngIf="esMioElComentario(comentario.autor) && !masComentarios" (click)="deleteComentarioUser(comentario.id)">Eliminar</button>
             <button class="btn btn-danger" *ngIf="isAdmin() && !masComentarios" (click)="deleteComentario(comentario.id)">Eliminar</button>
         </div>
     </div>
