--- a/adminpro-angular7-lite/Angular/src/app/session/login/login.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/session/login/login.component.html
@@ -25,7 +25,7 @@
                                     </td>
                                 </tr>
                                 <button mat-raised-button color="primary" id="login_boton" (click)="doLogin()">Login</button>
-                                <button mat-button color="primary" id="loginGogle_boton" (click)="doLoginGoogle()">Login Google</button>
+                                <button mat-button color="primary" id="loginGogle_boton" (click)="doLoginGoogle()"><i class="fa fa-google"></i> &nbsp;&nbsp; Login Google</button>
                             </table>
                         </form>
                     </mat-tab>
